--- a/room/pubspec.yaml
+++ b/room/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_spinkit: ^5.1.0
   font_awesome_flutter:
   curved_navigation_bar: ^1.0.3
+  google_fonts: ^3.0.1
+  circular_profile_avatar: ^2.0.5
+  
 
 dev_dependencies:
   flutter_test:
